Alteração no titulo, descrição e palvras chave do site

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <link rel="icon" type="image/svg+xml" href="/src/assets/images/logop.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Empresa especializada em soluções tecnológicas para o seu negócio. Desenvolvimento web, aplicativos móveis, cloud computing e muito mais." />
+    content="PlenoTech oferece assistência técnica de computadores e notebooks em Uberlândia. Diagnóstico gratuito, reparos rápidos e montagem de PCs sob medida com qualidade e agilidade." />
   <meta name="keywords"
-    content="tecnologia, desenvolvimento web, aplicativos, cloud, consultoria em TI, soluções digitais" />
+    content="assistência técnica de computadores, assistência técnica de notebooks, reparo de computadores em Uberlândia, conserto de notebook Uberlândia, montagem de computadores, diagnóstico gratuito de computador, manutenção de notebooks, reparo de hardware, serviços de informática em Uberlândia, upgrade de computador, limpeza de computador, serviços de TI, conserto de placa-mãe, troca de tela de notebook, assistência técnica especializada Uberlândia, PlenoTech, conserto de PCs Uberlândia" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@600;700;800&display=swap"
     rel="stylesheet">
-  <title>PlenoTech - Soluções Tecnológicas para seu Negócio</title>
+  <title>Assistência Técnica de Computadores e Notebooks em Uberlândia | PlenoTech</title>
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
